# fun7

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-build.yml  terraform-provision.yml
terraform/: main.tf  variables.tf
