[tool.poetry]
name = "fun7"
version = "0.1.0"
description = "Simple CTS system"
authors = ["Vanja Stojanović <vanja.stojanovic25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
